<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_profile_controls_hint">Skin and cape controls only appear when a Microsoft profile session is available.</string>
    <string name="account_required_before_install_message">Please sign in with Microsoft at least once before installing Minecraft. After that, offline mode stays unlocked.</string>
    <string name="account_required_title">Microsoft sign-in required</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">DroidBridge</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="button_accept_eula">Accept and Continue</string>
    <string name="button_add_mods">Add mods</string>
    <string name="button_add_storage_location">Add storage location</string>
    <string name="button_browse_content">Browse Content</string>
    <string name="button_browse_mods">Browse Mods</string>
    <string name="button_browse_resourcepacks">Browse Resourcepacks</string>
    <string name="button_browse_shaderpacks">Browse Shaderpacks</string>
    <string name="button_clear_custom_skin">Clear skin</string>
    <string name="button_clear_renderer_plugin_cache">Clear plugin cache</string>
    <string name="button_delete_forever">Delete forever</string>
    <string name="button_delete_instance">Delete instance</string>
    <string name="button_edit_builtin_controller">Edit built-in controller settings</string>
    <string name="button_grant_renderer_storage_access">Grant storage access</string>
    <string name="button_import_renderer_plugin">Import APK</string>
    <string name="button_install_version">Install Vanilla</string>
    <string name="button_launch">Install / Launch selected version</string>
    <string name="button_launch_version">Launch</string>
    <string name="button_manage_offline_accounts">Manage offline accounts</string>
    <string name="button_manage_touch_controls">Manage touch layouts</string>
    <string name="button_open_droidbridge_license">DroidBridge Licensing Info</string>
    <string name="button_open_droidbridge_privacy_policy">DroidBridge Privacy Policy</string>
    <string name="button_open_droidbridge_terms">DroidBridge Terms of Service</string>
    <string name="button_open_eula">Open Minecraft EULA</string>
    <string name="button_open_folder">Folder</string>
    <string name="button_open_minecraft_eula">Minecraft EULA</string>
    <string name="button_open_renderer_plugin_settings">Open plugin settings</string>
    <string name="button_pick_mobileglues_folder">Pick MG folder</string>
    <string name="button_play_instance">Play</string>
    <string name="button_refresh_microsoft_skin">Refresh Microsoft account / skin</string>
    <string name="button_refresh_renderers">Refresh</string>
    <string name="button_refresh_versions">Refresh</string>
    <string name="button_remove_mods">Remove mods</string>
    <string name="button_renderer_storage_access_granted">Storage access granted</string>
    <string name="button_reset_game_settings_button_position">Reset button position</string>
    <string name="button_select_custom_skin">Custom skin</string>
    <string name="button_settings">Settings</string>
    <string name="button_share_latest_log">Share Latestlog</string>
    <string name="button_share_logs">Share Logs</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_out">Sign out</string>
    <string name="button_storage_locations">Storage</string>
    <string name="button_upload_mods">Upload Mods</string>
    <string name="button_upload_resourcepacks">Upload Resourcepacks</string>
    <string name="button_upload_shaderpacks">Upload Shaderpacks</string>
    <string name="button_upload_worlds">Upload Worlds</string>
    <string name="button_use_microsoft_account">Use Microsoft account</string>
    <string name="button_use_offline_account">Use offline account</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="content_browser_back_to_instance">Back to instance</string>
    <string name="content_browser_category_mods">Browse Mods</string>
    <string name="content_browser_category_resourcepacks">Browse Resourcepacks</string>
    <string name="content_browser_category_shaderpacks">Browse Shaderpacks</string>
    <string name="content_browser_curseforge_not_ready">CurseForge needs an API key before it can load.</string>
    <string name="content_browser_curseforge_not_ready_long">CurseForge could not load. Make sure your API key is configured.</string>
    <string name="content_browser_datapacks_plural">data packs</string>
    <string name="content_browser_install">Install</string>
    <string name="content_browser_install_failed">Install failed: %1$s</string>
    <string name="content_browser_install_message">Install %1$s into this instance as %2$s for Minecraft %3$s / %4$s? Required dependencies will be installed automatically.</string>
    <string name="content_browser_install_not_ready">Install flow for %1$s is not wired yet.</string>
    <string name="content_browser_install_started">Installing %1$s…</string>
    <string name="content_browser_install_title">Install content to instance</string>
    <string name="content_browser_install_title_value">Install %1$s?</string>
    <string name="content_browser_installed">Installed</string>
    <string name="content_browser_instance_icon_description">Instance icon</string>
    <string name="content_browser_instance_meta">�� %1$s %2$s</string>
    <string name="content_browser_instance_value">Instance: %s</string>
    <string name="content_browser_load_failed">Unable to load content: %1$s</string>
    <string name="content_browser_loading">Loading from Modrinth…</string>
    <string name="content_browser_loading_source">Loading from %1$s…</string>
    <string name="content_browser_missing_game_dir">Missing instance game directory.</string>
    <string name="content_browser_mods_plural">mods</string>
    <string name="content_browser_next_page">Next page</string>
    <string name="content_browser_open_website">Open website</string>
    <string name="content_browser_page_indicator">Page %1$d of %2$d</string>
    <string name="content_browser_placeholder_message">The downloadable content manager will be wired here next. This screen already receives the selected instance and selected content tab.</string>
    <string name="content_browser_placeholder_title">Content browser</string>
    <string name="content_browser_previous_page">Previous page</string>
    <string name="content_browser_project_author">by %1$s ↗</string>
    <string name="content_browser_project_icon_description">Project icon</string>
    <string name="content_browser_project_menu">Project actions</string>
    <string name="content_browser_resourcepacks_plural">resource packs</string>
    <string name="content_browser_result_summary">%1$d %2$s from %3$s</string>
    <string name="content_browser_search_datapacks">Search data packs…</string>
    <string name="content_browser_search_mods">Search mods…</string>
    <string name="content_browser_search_resourcepacks">Search resource packs…</string>
    <string name="content_browser_search_shaders">Search shaders…</string>
    <string name="content_browser_shaders_plural">shaders</string>
    <string name="content_browser_sort_downloads">Sort by: Downloads</string>
    <string name="content_browser_source_curseforge">CurseForge</string>
    <string name="content_browser_source_modrinth">Modrinth</string>
    <string name="content_browser_tab_datapacks">Data Packs</string>
    <string name="content_browser_tab_mods">Mods</string>
    <string name="content_browser_tab_resourcepacks">Resource Packs</string>
    <string name="content_browser_tab_shaders">Shaders</string>
    <string name="content_browser_tag_unknown">Project</string>
    <string name="create_instance_select_icon">Select icon</string>
    <string name="instance_content_check_updates">Check Updates</string>
    <string name="instance_content_delete_button">Delete</string>
    <string name="instance_content_enable_switch">Enable or disable content</string>
    <string name="instance_content_icon_description">Content icon</string>
    <string name="instance_content_play_world_button">Play world</string>
    <string name="instance_content_update_all">Update All</string>
    <string name="instance_content_update_button">Update</string>
    <string name="instance_details_content_title">Instance content</string>
    <string name="instance_settings_content_description">Instance settings</string>
    <string name="modmanager_installed_source_icon">Installed platform</string>
</resources>